# rules-dotnet-publish-docker

./: .gitignore  BUILD.bazel  MODULE.bazel  Program.fs  README.md  WORKSPACE  paket.dependencies  sync-paket-bazel-deps.sh
paket/: paket.main.bzl
