load("@rules_dotnet//dotnet:defs.bzl", "fsharp_binary", "publish_binary")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_tarball")
load("@rules_pkg//:pkg.bzl", "pkg_tar")

fsharp_binary(
  name = "app",
  srcs = [
    "Program.fs",
  ],
  target_frameworks = [
    "net6.0",
  ],
  deps = [
    "@paket.main//fsharp.core",
  ],
  visibility = [
    "//visibility:public",
  ],
)

publish_binary(
  name = "app_linux_x64",
  binary = ":app",
  target_framework = "net6.0",
  self_contained = True,
  runtime_identifier = "linux-x64",
)

pkg_tar(
  name = "app_linux_x64_archive",
  srcs = [
    ":app_linux_x64",
  ],
  strip_prefix = "app_linux_x64/publish/linux-x64",
  include_runfiles = True,
)

oci_image(
  name = "image_debian",
  base = "@dotnet_runtime_deps_6_0_10",
  tars = [ ":app_linux_x64_archive" ],
  entrypoint = [ "/app" ],
  tags = [ "manual" ],
)

oci_tarball(
  name = "image_debian_tarball",
  image = ":image_debian",
  repo_tags = [ "image_debian:latest" ],
)

publish_binary(
  name = "app_alpine_x64",
  binary = ":app",
  target_framework = "net6.0",
  self_contained = True,
  runtime_identifier = "alpine-x64",
)

pkg_tar(
  name = "app_alpine_x64_archive",
  srcs = [
    ":app_alpine_x64",
  ],
  # strip_prefix = "app_alpine_x64/publish/linux-alpine-x64",
  strip_prefix = "app_alpine_x64/publish/linux-musl-x64",
  include_runfiles = True,
)

oci_image(
  name = "image_alpine",
  base = "@dotnet_runtime_deps_alpine_3_16",
  tars = [ ":app_alpine_x64_archive" ],
  entrypoint = [ "/app" ],
  tags = [ "manual" ],
)

oci_tarball(
  name = "image_alpine_tarball",
  image = ":image_alpine",
  repo_tags = [ "image_alpine:latest" ],
)
